Jupyter autosaved ipynb under the old name

--- a/Ovid_Caesar_Cicero.ipynb
+++ b/Ovid_Caesar_Cicero.ipynb
@@ -2,13 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# !conda install lxml --y\n",
+    "# !pip install --upgrade gensim\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "import pandas as pd\n",
     "import requests\n",
-    "from bs4 import BeautifulSoup\n"
+    "from bs4 import BeautifulSoup\n",
+    "from nltk.tokenize.repp import ReppTokenizer\n",
+    "import numpy as np\n",
+    "from cltk.tokenize.word import WordTokenizer\n",
+    "from cltk.corpus.utils.importer import CorpusImporter\n",
+    "from nltk.tokenize.punkt import PunktLanguageVars\n",
+    "from cltk.stop.latin import STOPS_LIST\n",
+    "from cltk.vector.word2vec import make_model\n",
+    "from cltk.stem.latin.j_v import JVReplacer\n",
+    "from nltk import FreqDist\n",
+    "j = JVReplacer()\n",
+    "from cltk.lemmatize.latin.backoff import BackoffLatinLemmatizer\n",
+    "lemmatizer = BackoffLatinLemmatizer()\n",
+    "corpus_importer=CorpusImporter('latin')\n",
+    "corpus_importer.import_corpus('latin_models_cltk')\n"
    ]
   },
   {
@@ -208,7 +233,9 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -28006,7 +28033,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -28203,7 +28232,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -51706,6 +51737,83 @@
    ],
    "source": [
     "final_cicero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "last_cicero, last_caesar, last_ovid = [],[],[]\n",
+    "for c in final_cicero:\n",
+    "    last_cicero.append(lemmatizer.lemmatize(c))\n",
+    "for c in final_caesar:\n",
+    "    last_caesar.append(lemmatizer.lemmatize(c))\n",
+    "for o in ultimate_ovid:\n",
+    "    last_ovid.append(lemmatizer.lemmatize(o))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "j = JVReplacer()\n",
+    "cicero_stops, caesar_stops, ovid_stops = [],[],[]\n",
+    "for lis in last_cicero:\n",
+    "    inter=[]\n",
+    "    for word in lis:\n",
+    "        if word[0] not in STOPS_LIST:\n",
+    "            inter.append(j.replace(word[0]))\n",
+    "    cicero_stops.append(inter)\n",
+    "for lis in last_caesar:\n",
+    "    inter=[]\n",
+    "    for word in lis:\n",
+    "        if word[0] not in STOPS_LIST:\n",
+    "            inter.append(j.replace(word[0]))\n",
+    "    caesar_stops.append(inter)\n",
+    "for lis in last_ovid:\n",
+    "    inter=[]\n",
+    "    for word in lis:\n",
+    "        if word[0] not in STOPS_LIST:\n",
+    "            inter.append(j.replace(word[0]))\n",
+    "    ovid_stops.append(inter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open('cicero.pickle', 'wb') as f:\n",
+    "    pickle.dump(cicero_stops, f, pickle.HIGHEST_PROTOCOL)\n",
+    "with open('caesar.pickle', 'wb') as f:\n",
+    "    pickle.dump(caesar_stops, f, pickle.HIGHEST_PROTOCOL)\n",
+    "with open('ovid.pickle', 'wb') as f:\n",
+    "    pickle.dump(ovid_stops, f, pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Latin.ipynb               Untitled.ipynb            ovid.pickle\r\n",
+      "Ovid_Caesar_Cicero.ipynb  caesar.pickle\r\n",
+      "Perseus.xml               cicero.pickle\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
    ]
   },
   {
