adding work from today

--- a/Latin.ipynb
+++ b/Latin.ipynb
@@ -33179,88 +33179,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('', 474),\n",
-       " (\"' \", 134),\n",
-       " ('  ', 36),\n",
-       " ('”', 14),\n",
-       " (' currite ducentes subtegmina, currite, fusi', 11),\n",
-       " (' io Hymen Hymenaee io, io Hymen Hymenaee', 9),\n",
-       " (' Hymen o Hymenaee, Hymen ades o Hymenaee', 9),\n",
-       " (\"' inquit\", 8),\n",
-       " (\"' dixerat\", 6),\n",
-       " (' \\xa0 ', 6),\n",
-       " (' insequitur', 4),\n",
-       " (' quid struis', 4),\n",
-       " (' quid moror', 4),\n",
-       " (' quae mentem insania mutat', 4),\n",
-       " (' quis huic deo compararier ausit', 3),\n",
-       " (' quibus', 3),\n",
-       " ('\"', 2),\n",
-       " (\"' Hoc ut dixit, Amor sinistra ut ante dextra sternuit approbationem\", 2),\n",
-       " (' quid moraris emori', 2),\n",
-       " (' sed abit dies: prodeas noua nupta', 2),\n",
-       " ('Arma uirumque cano, Troiae qui primus ab oris Italiam, fato profugus, Lauiniaque uenit litora, multum ille et terris iactatus et alto ui superum saeuae memorem Iunonis ob iram; multa quoque et bello passus, dum conderet urbem,',\n",
-       "  2),\n",
-       " (' inferretque deos Latio, genus unde Latinum, Albanique patres, atque altae moenia Romae',\n",
-       "  2),\n",
-       " (' impulerit', 2),\n",
-       " (' Tantaene animis caelestibus irae', 2),\n",
-       " (' posthabita coluisse Samo; hic illius arma, hic currus fuit; hoc regnum dea gentibus esse, si qua fata sinant, iam tum tenditque fouetque',\n",
-       "  2),\n",
-       " (' Progeniem sed enim Troiano a sanguine duci audierat, Tyrias olim quae uerteret arces;',\n",
-       "  2),\n",
-       " (' hinc populum late regem belloque superbum uenturum excidio Libyae: sic uoluere Parcas',\n",
-       "  2),\n",
-       " (' Id metuens, ueterisque memor Saturnia belli, prima quod ad Troiam pro caris gesserat Argis— necdum etiam causae irarum saeuique dolores',\n",
-       "  2),\n",
-       " (' exciderant animo: manet alta mente repostum iudicium Paridis spretaeque iniuria formae, et genus inuisum, et rapti Ganymedis honores',\n",
-       "  2),\n",
-       " (' His accensa super, iactatos aequore toto Troas, reliquias Danaum atque immitis Achilli,',\n",
-       "  2),\n",
-       " (' arcebat longe Latio, multosque per annos errabant, acti fatis, maria omnia circum',\n",
-       "  2),\n",
-       " (' Tantae molis erat Romanam condere gentem', 2),\n",
-       " (\" cum Iuno, aeternum seruans sub pectore uolnus, haec secum: 'Mene incepto desistere uictam, nec posse Italia Teucrorum auertere regem\",\n",
-       "  2),\n",
-       " (' Quippe uetor fatis', 2),\n",
-       " (' Pallasne exurere classem Argiuom atque ipsos potuit submergere ponto,', 2),\n",
-       " (' unius ob noxam et furias Aiacis Oilei', 2),\n",
-       " (' Ipsa, Iouis rapidum iaculata e nubibus ignem, disiecitque rates euertitque aequora uentis, illum expirantem transfixo pectore flammas turbine corripuit scopuloque infixit acuto',\n",
-       "  2),\n",
-       " (' Ast ego, quae diuom incedo regina, Iouisque et soror et coniunx, una cum gente tot annos bella gero',\n",
-       "  2),\n",
-       " (' Et quisquam numen Iunonis adoret praeterea, aut supplex aris imponet honorem',\n",
-       "  2),\n",
-       " (' nimborum in patriam, loca feta furentibus austris, Aeoliam uenit', 2),\n",
-       " (' Hic uasto rex Aeolus antro luctantes uentos tempestatesque sonoras imperio premit ac uinclis et carcere frenat',\n",
-       "  2),\n",
-       " (' Illi indignantes magno cum murmure montis', 2),\n",
-       " (' circum claustra fremunt; celsa sedet Aeolus arce sceptra tenens, mollitque animos et temperat iras',\n",
-       "  2),\n",
-       " (' Ni faciat, maria ac terras caelumque profundum quippe ferant rapidi secum uerrantque per auras',\n",
-       "  2),\n",
-       " (' Sed pater omnipotens speluncis abdidit atris,', 2),\n",
-       " (' hoc metuens, molemque et montis insuper altos imposuit, regemque dedit, qui foedere certo et premere et laxas sciret dare iussus habenas',\n",
-       "  2),\n",
-       " (' Ad quem tum Iuno supplex his uocibus usa est: ', 2),\n",
-       " (' et mulcere dedit fluctus et tollere uento, gens inimica mihi Tyrrhenum nauigat aequor, Ilium in Italiam portans uictosque Penates: incute uim uentis submersasque obrue puppes, aut age diuersos et disiice corpora ponto',\n",
-       "  2),\n",
-       " (' Sunt mihi bis septem praestanti corpore nymphae, quarum quae forma pulcherrima Deiopea, conubio iungam stabili propriamque dicabo, omnis ut tecum meritis pro talibus annos exigat, et pulchra faciat te prole parentem',\n",
-       "  2),\n",
-       " (' Africus, et uastos uoluunt ad litora fluctus', 2)]"
-      ]
-     },
-     "execution_count": 138,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'allstops' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-d2650dab1c9f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mwholebag\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mallstops\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mlis\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlis\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m             \u001b[0mwholebag\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'allstops' is not defined"
+     ]
     }
    ],
    "source": [
@@ -33269,7 +33200,7 @@
     "    for lis in item:\n",
     "        for c in lis:\n",
     "            wholebag.append(c)\n",
-    "FreqDist(wholebag).most_common(50)"
+    "data=FreqDist(wholebag)"
    ]
   },
   {
